src/lexer/snapshots/dcc__lexer__logos_lexer__test__adjacent_single_char_operators_are_not_merged.snap
---
source: src/lexer/logos_lexer.rs
expression: "types(\"(){}[];,.~?:\")"
---
[
    OpenParen,
    CloseParen,
    OpenBrace,
    CloseBrace,
    OpenBracket,
    CloseBracket,
    Semicolon,
    Comma,
    Dot,
    Tilde,
    Question,
    Colon,
    EOF,
]
