src/lexer/snapshots/dcc__lexer__logos_lexer__test__char_constant_with_escape.snap
---
source: src/lexer/logos_lexer.rs
expression: "values(r\"'a' '\\n' '\\''\")"
---
[
    Some(
        "a",
    ),
    Some(
        "\\n",
    ),
    Some(
        "\\'",
    ),
    None,
]
