src/lexer/snapshots/dcc__lexer__logos_lexer__test__identifier_with_digits_and_underscores.snap
---
source: src/lexer/logos_lexer.rs
expression: "types(\"_foo bar_2 __x\")"
---
[
    Identifier,
    Identifier,
    Identifier,
    EOF,
]
