src/lexer/snapshots/dcc__lexer__logos_lexer__test__integer_constant_suffixes.snap
---
source: src/lexer/logos_lexer.rs
expression: "types(\"123 123l 123L 123u 123U\")"
---
[
    IntConstant,
    LongConstant,
    LongConstant,
    UnsignedConstant,
    UnsignedConstant,
    EOF,
]
