src/lexer/snapshots/dcc__lexer__logos_lexer__test__keyword_prefix_is_not_a_keyword.snap
---
source: src/lexer/logos_lexer.rs
expression: "types(\"intx\")"
---
[
    Identifier,
    EOF,
]
