src/lexer/snapshots/dcc__lexer__logos_lexer__test__multi_char_operators_are_greedy.snap
---
source: src/lexer/logos_lexer.rs
expression: "types(\">>= <<= == != && || -> ++ --\")"
---
[
    GreaterGreaterEqual,
    LessLessEqual,
    EqualEqual,
    BangEqual,
    AndAnd,
    PipePipe,
    Arrow,
    PlusPlus,
    MinusMinus,
    EOF,
]
