src/lexer/snapshots/dcc__lexer__logos_lexer__test__string_literal_empty_and_with_escapes.snap
---
source: src/lexer/logos_lexer.rs
expression: "values(r#\"\"\" \"hi\\n\\\"there\\\"\"\"#)"
---
[
    Some(
        "",
    ),
    Some(
        "hi\\n\\\"there\\\"",
    ),
    None,
]
