src/lexer/snapshots/dcc__lexer__logos_lexer__test__suffix_strips_from_value.snap
---
source: src/lexer/logos_lexer.rs
expression: "values(\"123L 123UL\")"
---
[
    Some(
        "123",
    ),
    Some(
        "123",
    ),
    None,
]
