src/lexer/snapshots/dcc__lexer__logos_lexer__test__unsigned_long_suffix_order_and_case_independent.snap
---
source: src/lexer/logos_lexer.rs
expression: "types(\"123lu 123UL 123Lu 123uL\")"
---
[
    UnsignedLongConstant,
    UnsignedLongConstant,
    UnsignedLongConstant,
    UnsignedLongConstant,
    EOF,
]
